css/footer.css
.footer {
    background: #222;
    color: white;
    padding-bottom: 10vh;
    width: 100%;
}



.footer__logo {
    height: 30px;
    position: relative;
    left: 10px;
    top: 10px;
}

.footer__info{
    position: relative;
    top: 10px;
    left: 10px;
}

.footer__copy{
    align-items: center;
    position: relative;
    top:75px;
    text-align: center;
}

.google-map{
    max-width: 300px;
    position: absolute;
    top: 108vh;
    left: 78vw;

}
    
    

